# cen429-2025-2026-5-muhammedbesir-velioglu-cpp

./: .gitignore  7-build-app-linux.sh  7-build-app-windows.bat  7-build-doc-windows.bat  8-build-test-windows.bat  9-clean-project.bat  CMakeLists.txt  DoxyfileLibLinux  DoxyfileLibWin  DoxyfileTestLinux  DoxyfileTestWin  README.md  mkdocs.yml
.github/workflows/: cpp.yml
buildCmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LocalSportsapp.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
buildCmake/src/localsports/: INSTALL.vcxproj  INSTALL.vcxproj.filters  LocalSports.vcxproj  LocalSports.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
buildCmake/src/localsportsapp/: INSTALL.vcxproj  INSTALL.vcxproj.filters  LocalSportsapp.vcxproj  LocalSportsapp.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
buildCmake/src/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
buildCmake/src/utility/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  utility.vcxproj  utility.vcxproj.filters
build_win/: testResults_windows.html  testResults_windows.xml
docs/coverxygentestwin/: C__Users_Can_Ahmed_Desktop_cen429_2025_2026_5_muhac_tests_LocalSports_localsports_test.cpp.html  C__Users_Can_Ahmed_Desktop_cen429_2025_2026_5_muhammedbesir_velioglu_cpp_test.html  C__Users_Can_Ahmed_Desktop_cen429_2025_2026_5_muhau_cpp_src_tests_utility_utility_test.cpp.html  C__cen429_2025_2026_5_muhammedbesir_velioglu_cpp_src_tests_LocalSports_localsports_test.cpp.html  C__cen429_2025_2026_5_muhammedbesir_velioglu_cpp_src_tests_utility_utility_test.cpp.html  index.htm  index.html  lcov_doxygen_test_win.info  main.js
docs/doxygenlibwin/html/: _r_e_a_d_m_e_8md.html  annotated.html  class_coruh_1_1_utility_1_1_math_utility-members.html  class_coruh_1_1_utility_1_1_math_utility.html  classes.html  classteamcore_1_1_secure_buffer-members.html  classteamcore_1_1_secure_buffer.html  classteamcore_1_1_secure_buffer__coll__graph.md5  common_types_8h.html  common_types_8h__dep__incl.md5  common_types_8h__incl.md5  common_types_8h_source.html  dir_000004_000003.html  dir_000006_000000.html  dir_000007_000001.html  dir_000007_000003.html  dir_000007_000006.html  dir_000008_000002.html  dir_000009_000003.html  dir_000010_000004.html  dir_000010_000006.html  dir_000011_000005.html  dir_0619a8f54b4fad7043a6de45be8fde0b.html  dir_18135739faa5b0f5ea4b5e3e85553449.html  dir_1a3b8499b331fe4e1564b1eb295a0893.html  dir_1ae7ff6c8a763c9d05d5365fcf363cd8.html  dir_1cc440524e7f7fca440a2bd4029a9680.html  dir_2cc88161db9dbbd14779a7b712899698.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_74ef3ad7abb25953fbdb01c44c0cc43c.html  dir_81f4a376f8ee5ff6eae40fcb61af90dc.html  dir_909f2d8eced2fc0f95c4e73b28a8363b.html  (+100 more)
report_doc_lib_hist_linux/: 2023-10-28_20-28-59_CoverageHistory.xml  2023-10-28_20-32-34_CoverageHistory.xml  2023-10-28_20-36-22_CoverageHistory.xml
report_doc_lib_hist_win/: 2023-10-28_19-30-26_CoverageHistory.xml
report_doc_test_hist_linux/: 2023-10-28_20-29-30_CoverageHistory.xml  2023-10-28_20-33-06_CoverageHistory.xml  2023-10-28_20-36-53_CoverageHistory.xml
report_doc_test_hist_win/: 2023-10-28_19-30-27_CoverageHistory.xml  2025-11-01_12-29-47_CoverageHistory.xml  2025-11-01_12-48-36_CoverageHistory.xml  2025-11-01_13-16-58_CoverageHistory.xml  2025-11-01_14-43-04_CoverageHistory.xml  2025-11-01_14-50-13_CoverageHistory.xml  2025-11-01_14-52-27_CoverageHistory.xml  2025-11-01_15-09-03_CoverageHistory.xml  2025-11-01_15-16-16_CoverageHistory.xml  2025-11-01_15-25-44_CoverageHistory.xml  2025-11-01_15-30-02_CoverageHistory.xml  2025-11-01_15-34-26_CoverageHistory.xml  2025-11-01_15-48-49_CoverageHistory.xml  2025-11-01_15-51-44_CoverageHistory.xml  2025-11-01_16-33-06_CoverageHistory.xml  2025-11-01_16-58-15_CoverageHistory.xml  2025-11-01_17-04-48_CoverageHistory.xml  2025-11-01_17-07-31_CoverageHistory.xml  2025-11-01_17-21-40_CoverageHistory.xml  2025-11-01_17-25-58_CoverageHistory.xml  2025-11-01_17-32-05_CoverageHistory.xml  2025-11-01_17-35-02_CoverageHistory.xml  2025-11-02_14-27-50_CoverageHistory.xml  2025-11-02_14-34-14_CoverageHistory.xml  2025-11-02_14-47-01_CoverageHistory.xml  2025-11-02_14-47-35_CoverageHistory.xml  2025-11-02_14-49-48_CoverageHistory.xml  2025-11-02_15-17-51_CoverageHistory.xml  2025-11-02_15-48-39_CoverageHistory.xml  2025-11-02_15-52-07_CoverageHistory.xml  2025-11-02_16-01-30_CoverageHistory.xml  2025-11-02_16-26-57_CoverageHistory.xml  2025-11-02_16-28-59_CoverageHistory.xml  2025-11-02_16-38-29_CoverageHistory.xml  2025-11-02_16-41-21_CoverageHistory.xml  2025-11-02_16-52-30_CoverageHistory.xml  2025-11-02_18-15-49_CoverageHistory.xml  2025-11-02_18-29-19_CoverageHistory.xml  2025-11-02_18-45-03_CoverageHistory.xml  2025-11-04_13-12-33_CoverageHistory.xml
report_test_hist_win/: 2023-10-28_19-31-41_CoverageHistory.xml
src/: namespaces.dox
src/localsports/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LocalSports.vcxproj  LocalSports.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
src/localsports/header/: localsports.h  localsports.h.orig  rasp.h  security_hardening.h  security_layer.h
src/localsports/src/: localsports.cpp  localsports.cpp.orig  rasp.cpp  security_hardening.cpp  security_layer.cpp
src/localsportsapp/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LocalSportsapp.vcxproj  LocalSportsapp.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
src/localsportsapp/header/: localsportsapp.h  localsportsapp.h.orig
src/localsportsapp/src/: localsportsapp.cpp  localsportsapp.cpp.orig
src/tests/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
src/utility/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  utility.vcxproj  utility.vcxproj.filters
(+487 files in other folders)
